--- a/package.json
+++ b/package.json
@@ -1,25 +1,34 @@
 {
-  "name": "reactnd-would-you-rather",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "react": "^16.8.2",
-    "react-dom": "^16.8.2",
-    "react-scripts": "2.1.5"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+    "name": "reactnd-would-you-rather",
+    "version": "0.1.0",
+    "dependencies": {
+        "formik": "^1.5.1",
+        "history": "^4.7.2",
+        "react": "^16.8.2",
+        "react-dom": "^16.8.2",
+        "react-redux": "^6.0.1",
+        "react-router": "^4.3.1",
+        "react-router-dom": "^4.3.1",
+        "react-scripts": "^2.1.8",
+        "redux": "^4.0.1",
+        "redux-thunk": "^2.3.0",
+        "save": "^2.3.3",
+        "styled-components": "^4.1.3",
+        "yup": "^0.27.0"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": [
+        ">0.2%",
+        "not dead",
+        "not ie <= 11",
+        "not op_mini all"
+    ]
 }
