--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Would You Rather App",
+  "name": "React Nano Degree Project, Would You Rather",
   "icons": [
     {
       "src": "favicon.ico",
